remove link underline <STYLE>A {text-decoration: none;} </STYLE>

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>odin recipes</title>
         <meta charset="UTF-8">
     </head>
+    <STYLE>A {text-decoration: none;} </STYLE>
     <body>
         <h1>ODIN RECIPES</h1>
     <ul>
