played with css box, display

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <STYLE>A {text-decoration: none;} </STYLE>
     <body>
         <div>
+        <h1>ODIN RECIPES</h1>
         <p>Lorem Ipsum is simply dummy text of the printing and 
             typesetting industry. Lorem Ipsum has been the industry's 
             standard dummy text ever since the 1500s, 
@@ -21,10 +22,9 @@
             desktop publishing software like Aldus PageMaker including 
             versions of Lorem Ipsum.
         </p>
-        <h1>ODIN RECIPES</h1>
     <ul>
-        <li><a href="recipes/tenderloin.html">Spicy-Sweet Pork Tenderloin</a></li>
-        <li><a href="recipes/cheesecake.html">double layered cheese cake</a></li> 
+        <li><a href="recipes/tenderloin.html"><img src="img/image.jpg" class="img"><p>Spicy-Sweet Pork Tenderloin</p></a></li>
+        <li class="rightside"><a href="recipes/cheesecake.html"><p>double layered cheese cake</p></a></li> 
     </ul>
     </div>
     </body>
