added text and rectitle class

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <div>
         <h1>ODIN RECIPES</h1>
-        <p>Lorem Ipsum is simply dummy text of the printing and 
+        <p class="text">Lorem Ipsum is simply dummy text of the printing and 
             typesetting industry. Lorem Ipsum has been the industry's 
             standard dummy text ever since the 1500s, 
             when an unknown printer took a galley of type and 
@@ -23,8 +23,9 @@
             versions of Lorem Ipsum.
         </p>
     <ul>
-        <li><a href="recipes/tenderloin.html"><img src="img/image.jpg" class="img"><p>Spicy-Sweet Pork Tenderloin</p></a></li>
-        <li class="rightside"><a href="recipes/cheesecake.html"><p>double layered cheese cake</p></a></li> 
+        <li><a href="recipes/tenderloin.html"><img src="img/image.jpg" class="img"><p class="rectitle">Spicy-Sweet Pork Tenderloin</p></a></li>
+        <li><a href="recipes/cheesecake.html"><img src="img/image.jpg" class="img"><p class="rectitle">double layered cheese cake</p></a></li>
+        <li><a href="recipes/cheesecake.html"><img src="img/image.jpg" class="img"><p class="rectitle">double layered cheese cake</p></a></li> 
     </ul>
     </div>
     </body>
